--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style.css" />
     <title>Practice Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="main">
-        
+      <div id="upper">
+        <div id="left">
+          <h1>Rohit Kandpal<br />Basic Web Dev</h1>
+          <p>(Ahmedabad, India)</p>
+        </div>
+        <div id="right">
+          <p style="width: 35px; border-radius: 50%">0</p>
+          <p>Menu</p>
+          <h1>
+            <i
+              style="font-size: 25px; color: black"
+              class="ri-arrow-right-down-line"
+            ></i>
+            Scroll Down
+          </h1>
+        </div>
+      </div>
+      <div id="hero-photo">
+        <img src="/Photo.jpeg" alt="" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
