--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       <div id="hero-photo">
         <img src="/Photo.jpeg" alt="" />
       </div>
+      <div id="middle-lower">
+        <h1>A a web developer, I focus <br> on creating reliable <br> and creative digital <br> webpages</h1>
+        <h1>New Commit</h1>
+      </div>
     </div>
   </body>
 </html>
