--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>Practice Portfolio</title>
   </head>
   <body>
+    <div id="nav">
+      <h4>0</h4>
+      <h4>Menu</h4>
+    </div>
     <div id="main">
       <div id="upper">
         <div id="left">
@@ -18,23 +22,58 @@
           <p>(Ahmedabad, India)</p>
         </div>
         <div id="right">
-          <p style="width: 35px; border-radius: 50%">0</p>
-          <p>Menu</p>
-          <h1>
-            <i
-              style="font-size: 25px; color: black"
-              class="ri-arrow-right-down-line"
-            ></i>
-            Scroll Down
-          </h1>
+          <a href="#about">
+            <h1>
+              <i
+                style="font-size: 25px; color: black"
+                class="ri-arrow-right-down-line"
+              ></i>
+              Scroll Down
+            </h1>
+          </a>
         </div>
       </div>
       <div id="hero-photo">
         <img src="/Photo.jpeg" alt="" />
       </div>
-      <div id="middle-lower">
-        <h1>A a web developer, I focus <br> on creating reliable <br> and creative digital <br> webpages</h1>
-        <h1>New Commit</h1>
+      <div id="about"> 
+        <h2>As a web developer, I focus on creating reliable and creative digital webpages</h2>
+        <div id="about-part2">
+          <h3>(About Me)</h3>
+          <div id="icons">
+            <a href="www.instagram.com/rohit_kandpal__" id="instagram"><i class="ri-instagram-line"></i></a>
+            <a href="" id="twitter"><i class="ri-twitter-fill"></i></a>
+            <a href="" id="dribble"><i class="ri-dribbble-line"></i></a>
+          </div>
+        </div>
+      </div>
+      <div id="what">
+        <div id="ido">
+          <h3>(What I Do)</h3>
+          <i class="ri-arrow-right-down-line"></i>
+        </div>
+        <div id="work">
+          <div id="work1">
+            <div class="sub-work" id="sub-work1">
+              <h2>Simple Designs</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, dolorem dignissimos, non quaerat ab excepturi optio fugiat facere laudantium ipsa saepe in, assumenda dicta minima!</p>
+            </div>
+            <div class="sub-work" id="sub-work2">
+              <h2>Responsive Pages</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, dolorem dignissimos, non quaerat ab excepturi optio fugiat facere laudantium ipsa saepe in, assumenda dicta minima!</p>
+            </div>
+          </div>
+          <div id="work2">
+            <div class="sub-work" id="sub-work1">
+              <h2>Backend Dev</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, dolorem dignissimos, non quaerat ab excepturi optio fugiat facere laudantium ipsa saepe in, assumenda dicta minima!</p>
+            </div>
+            <div class="sub-work" id="sub-work2">
+              <h2>Frontend Dev</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, dolorem dignissimos, non quaerat ab excepturi optio fugiat facere laudantium ipsa saepe in, assumenda dicta minima!</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
